# SubFlow

./: .gitignore  .pre-commit-config.yaml  DECISIONS.md  LICENSE  README.md  SUBTITLE_QUALITY_COMPARISON.md  TEST_REPORT.md  pyproject.toml
scripts/: translate_srt.py
src/subflow/: __init__.py  align.py  audio.py  burn.py  cli.py  config.py  ffmpeg.py  logging.py  models.py  pipeline.py  subtitle.py  transcribe.py  translate.py
tests/: conftest.py  test_align.py  test_audio.py  test_burn.py  test_config.py  test_subtitle.py  test_translate.py
